--- a/services.html
+++ b/services.html
@@ -4,10 +4,285 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/services.css">
+    <link rel="stylesheet" href="css/fontello.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <script defer src="css/fonts/fontawesome-all.js">
+
+    </script>
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid bg-dark">
+
+      <div class="row">
+        <div class="col-md-3 bg-light text-center logo-top">
+          <img src="img/logo.png" alt="">
+        </div>
+
+        <div class="col-md-9">
+          <div class="row">
+            <div class="text-secondary col-md email-top">
+              <i class="demo-icon icon-mail"></i>
+              <link>info@hellohelp.com</link>
+            </div>
+
+            <div class="text-secondary col-md phone-top">
+              <i class="demo-icon icon-phone-in-talk"></i>
+              <link>+440 875369208</link>
+            </div>
+
+            <div class="col-md">
+              <div class="btn-group dropright login-button">
+                <button type="button" class="btn btn-outline-secondary dropdown-toggle rounded-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    LOG IN
+                  </button>
+                <div class="dropdown-menu">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md">
+              <div class="dropdown">
+                <button class="language-button btn btn-outline-secondary dropdown-toggle rounded-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      EN
+                    </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="#">English</a>
+                  <a class="dropdown-item" href="#">Spanish</a>
+                  <a class="dropdown-item" href="#">French</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md border border-secondary text-center social-networking">
+              <a class="text-muted social-link" href="https://www.facebook.com/" target="_blank"><i class="demo-icon icon-facebook-squared"></i></a>
+              <a class="text-muted social-link" href="https://twitter.com/" target="_blank"><i class="demo-icon icon-twitter"></i></a>
+              <a class="text-muted social-link" href="https://www.instagram.com/" target="_blank"><i class="demo-icon icon-instagram"></i></a>
+              <a class="text-muted social-link" href="https://www.gmail.com" target="_blank"><i class="demo-icon icon-mail-1"></i></a>
+            </div>
+
+          </div>
+
+          <div class="row">
+            <div class="col-md-12">
+
+              <nav class="navbar navbar-expand-md">
+                <button class="navbar-toggler" type="button" data-toggle="collapse">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+
+                <div class="collapse navbar-collapse">
+                  <ul class="navbar-nav row">
+                    <li class="col-md-1 nav-item active">
+                      <a class="nav-link text-secondary top-directory" href="file:///C:/Projects/prototype-two/index.html">Home<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="col-md-3 nav-item">
+                      <a class="nav-link text-secondary top-directory" href="aboutus.html">About Us</a>
+                    </li>
+                    <li class="col-md-3 nav-item dropdown">
+                      <select class="selectpicker bg-dark border-0 text-secondary">
+                        <option value="Services">Services</option>
+                        <option value="saab">Saab</option>
+                        <option value="mercedes">Mercedes</option>
+                        <option value="audi">Audi</option>
+                      </select>
+                    </li>
+                    <li class="col-md-3 nav-item dropdown">
+                      <a href="products.html">
+                        <select class="selectpicker bg-dark border-0 text-secondary">
+                          <option value="Products">Products</option>
+                          <option value="saab">Saab</option>
+                          <option value="mercedes">Mercedes</option>
+                          <option value="audi">Audi</option>
+                        </select>
+                      </a>
+                    </li>
+                    <li class="col-md-1 nav-item">
+                      <a class="nav-link text-secondary" href="#">Gallery</a>
+                    </li>
+                    <li class="col-md-1 nav-item">
+                      <a class="nav-link text-secondary" href="#">Contact</a>
+                    </li>
+                  </ul>
+                </div>
+                <i class="text-secondary demo-icon icon-search"></i>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="row services-breadcrumb">
+        <div class="col-md-2">
+          <h2 class="gold-text">Services</h2>
+        </div>
+
+          <nav class="col-md-10" aria-label="breadcrumb">
+            <ol class="breadcrumb bg-dark">
+              <li class="breadcrumb-item"><a href="#">Home</a></li>
+              <li class="breadcrumb-item"><a href="#">Pages</a></li>
+              <li class="breadcrumb-item"><a href="#">Services</a></li>
+            </ol>
+          </nav>
+      </div>
+
+      <article class="preferences">
+        <h1>Preferences</h1>
+        <p class="bold-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, est quis congue iaculis, ipsum. Etiam sit amet, et laoreet magna. Intege, pharetra ut felis sed, viverra fringilla eros in diam pharetra dignissim. Ut sed ultrices erat. Donec vitae tempor tortor.</p>
+        <p>In sodales, urna lacinia ullamcorper scelerisque, metus sapien vehicula tellus, a scelerisque est tortor ut nibh. Cras sed tristique risus. Donec molestie arcu pretium scelerisque volutpat. Mauris id dui venenatis, placerat nisi id, cursus nunc. Proin est sapien, suscipit at erat eu, consequat eleifend ante. Mauris vitae justo suscipit, volutpat tortor eu, iaculis enim. Morbi maximus euismod tellus id consectetur. Phasellus quis auctor mi. Donec pulvinar aliquet vehicula. Sed in purus et nisi tempus sodales at sed nisi.  Sed imperdiet volutpat dictum. </p>
+      </article>
+
+      <div class="facilities">
+        <h2 class="text-center">Hotel Facilities</h2>
+        <div class="row">
+          <div class="col-md-4">
+            <i class="demo-icon icon-signal"></i>
+            <p>High-speed Internet</p>
+          </div>
+          <div class="col-md-4">
+            <i class="demo-icon icon-fridge"></i>
+            <p class="fridge">Fridge</p>
+          </div>
+          <div class="col-md-4">
+            <i class="demo-icon icon-food"></i>
+            <p class="freebreakfast">Free breakfast</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <i class="demo-icon icon-air-conditioner"></i>
+            <p class="air">Air conditioning</p>
+          </div>
+          <div class="col-md-4">
+            <i class="demo-icon icon-washing-machine-1"></i>
+            <p class="washer">Washing machine</p>
+          </div>
+          <div class="col-md-4">
+            <i class="demo-icon icon-parking-1"></i>
+            <p class="parking">Free parking</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <i class="demo-icon icon-swimming"></i>
+            <p class="swimming">Swimming pool</p>
+          </div>
+          <div class="col-md-4">
+            <i class="demo-icon icon-phone"></i>
+            <p class="roomservice">Room service</p>
+          </div>
+          <div class="col-md-4">
+            <i class="demo-icon icon-air"></i>
+            <p class="hairdryer">Hair dryer</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <i class="demo-icon icon-baby-buggy"></i>
+            <p class="childcare">Childcare</p>
+          </div>
+          <div class="col-md-4">
+            <i class="demo-icon icon-child"></i>
+            <p class="childcare">Childcare</p>
+          </div>
+          <div class="col-md-4">
+            <i class="demo-icon icon-bar"></i>
+            <p class="bar">Bar</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <i class="demo-icon icon-dumbbell"></i>
+            <p class="gym">Gym</p>
+          </div>
+          <div class="col-md-4">
+            <i class="demo-icon icon-lock"></i>
+            <p class="safe">Reception safe</p>
+          </div>
+          <div class="col-md-4">
+            <i class="demo-icon icon-tv"></i>
+            <p class="tv">TV</p>
+          </div>
+
+        </div>
+
+      </div>
+
+      <hr class="border-light">
+
+      <footer class="row bg-dark">
+        <div class="col-md-3 nortabout">
+          <h4 class="grey-text">NortSea About</h4>
+          <p class="grey-text">Lorem ipsum dolor sit amet, consectetur mollis ut odio. Vestibulum sit amet tristique libero, vitae accumsan dolor. Praesent et posuere ex. Suspendisse bibendum orci nec imperdiet porttitor. Quisque blandit ipsum at erat vulputate posuere. Morbi id urna ultrices, accumsan tortor vitae, facilisis leo.</p>
+          <button type="button" class="text-secondary btn btn-dark dropdown-toggle border-bottom" data-toggle="dropdown">
+            Read More
+          </button>
+        </div>
+
+        <div class="col-md-3 footer-links">
+          <h4 class="grey-text">NortSea Hotel</h4>
+            <a href="#" class="grey-text text-center">About Us</a>
+            <div class="w-100">
+
+            </div>
+            <a href="#" class="grey-text">Services</a>
+            <div class="w-100">
+
+            </div>
+            <a href="#" class="grey-text">Contact</a>
+        </div>
+
+
+        <div class="col-md-3">
+          <h4 class="grey-text">Contact Us</h4>
+          <div class="row">
+            <div class="col">
+              <p class="gold-text"><i class="demo-icon icon-location"></i>Address:</p>
+            </div>
+            <div class="col">
+              <p class="grey-text">1100 Pico Blvd
+              Santa Monica, CA 90405
+              United States</p>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col">
+              <p class="gold-text"><i class="demo-icon icon-phone"></i>Phone:</p>
+            </div>
+            <div class="col">
+              <p class="grey-text">+440 1233213208</p>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col">
+              <p class="gold-text"><i class="demo-icon icon-paper-plane"></i>Email:</p>
+            </div>
+            <div class="col">
+              <p class="grey-text">support@nortsea.com</p>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col">
+              <p class="gold-text"><i class="demo-icon icon-compass"></i>GPS:</p>
+            </div>
+            <div class="col">
+              <p class="grey-text">12.021211/118.469009</p>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-md-3 logo-footer">
+          <img src="img/logo-footer.png" alt="">
+        </div>
+
+      </footer>
+
 
     </div>
 
