--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,9 @@
   </head>
   <body>
     <div class="container-fluid bg-dark">
-      <div class="row">
+
+
+      <div class="row container toptop">
         <div class="col-md-3 bg-light text-center logo-top">
           <img src="img/logo.png" alt="">
         </div>
@@ -32,8 +34,8 @@
               <link>+440 875369208</link>
             </div>
 
-            <div class="col-md">
-              <div class="btn-group dropright login-button">
+            <div class="col-md login-button">
+              <div class="btn-group dropright">
                 <button type="button" class="btn btn-outline-secondary dropdown-toggle rounded-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     LOG IN
                   </button>
@@ -42,9 +44,9 @@
               </div>
             </div>
 
-            <div class="col-md">
+            <div class="col-md language-button">
               <div class="dropdown">
-                <button class="language-button btn btn-outline-secondary dropdown-toggle rounded-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-outline-secondary dropdown-toggle rounded-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       EN
                     </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -55,7 +57,7 @@
               </div>
             </div>
 
-            <div class="col-md border border-secondary text-center social-networking">
+            <div class="col-md border border-secondary d-flex justify-content-center align-items-center social-networking">
               <a class="text-muted social-link" href="https://www.facebook.com/" target="_blank"><i class="demo-icon icon-facebook-squared"></i></a>
               <a class="text-muted social-link" href="https://twitter.com/" target="_blank"><i class="demo-icon icon-twitter"></i></a>
               <a class="text-muted social-link" href="https://www.instagram.com/" target="_blank"><i class="demo-icon icon-instagram"></i></a>
@@ -75,7 +77,7 @@
                 <div class="collapse navbar-collapse">
                   <ul class="navbar-nav row">
                     <li class="col-md-1 nav-item active">
-                      <a class="nav-link text-secondary top-directory" href="file:///C:/Projects/prototype-two/index.html">Home<span class="sr-only">(current)</span></a>
+                      <a class="nav-link text-secondary top-directory" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="col-md-3 nav-item">
                       <a class="nav-link text-secondary top-directory" href="aboutus.html">About Us</a>
@@ -110,10 +112,12 @@
                 </div>
                 <i class="text-secondary demo-icon icon-search"></i>
               </nav>
+
             </div>
           </div>
         </div>
       </div>
+
 
       <hr class="header-hr">
 
