starting "gallery" page

--- a/aboutus.html
+++ b/aboutus.html
@@ -76,13 +76,13 @@
 
                 <div class="collapse navbar-collapse">
                   <ul class="navbar-nav row">
-                    <li class="col-md-1 nav-item active">
+                    <li class="col-md-2 nav-item active">
                       <a class="nav-link text-secondary top-directory" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="col-md-3 nav-item">
                       <a class="nav-link text-secondary top-directory" href="aboutus.html">About Us</a>
                     </li>
-                    <li class="col-md-3 nav-item dropdown">
+                    <li class="col-md-2 nav-item dropdown">
                       <a href="services.html">
                         <select class="selectpicker bg-dark border-0 text-secondary">
                           <option value="Services">Services</option>
@@ -92,7 +92,7 @@
                         </select>
                       </a>
                     </li>
-                    <li class="col-md-3 nav-item dropdown">
+                    <li class="col-md-2 nav-item dropdown">
                       <a href="products.html">
                         <select class="selectpicker bg-dark border-0 text-secondary">
                           <option value="Products">Products</option>
@@ -102,8 +102,8 @@
                         </select>
                       </a>
                     </li>
-                    <li class="col-md-1 nav-item">
-                      <a class="nav-link text-secondary" href="#">Gallery</a>
+                    <li class="col-md-2 nav-item">
+                      <a class="nav-link text-secondary" href="gallery.html">Gallery</a>
                     </li>
                     <li class="col-md-1 nav-item">
                       <a class="nav-link text-secondary" href="#">Contact</a>
