--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container-fluid bg-dark">
 
-      <div class="row">
+      <div class="row container toptop">
         <div class="col-md-3 bg-light text-center logo-top">
           <img src="img/logo.png" alt="">
         </div>
@@ -31,8 +31,8 @@
               <link>+440 875369208</link>
             </div>
 
-            <div class="col-md">
-              <div class="btn-group dropright login-button">
+            <div class="col-md login-button">
+              <div class="btn-group dropright">
                 <button type="button" class="btn btn-outline-secondary dropdown-toggle rounded-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     LOG IN
                   </button>
@@ -41,9 +41,9 @@
               </div>
             </div>
 
-            <div class="col-md">
+            <div class="col-md language-button">
               <div class="dropdown">
-                <button class="language-button btn btn-outline-secondary dropdown-toggle rounded-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-outline-secondary dropdown-toggle rounded-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       EN
                     </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -54,7 +54,7 @@
               </div>
             </div>
 
-            <div class="col-md border border-secondary text-center social-networking">
+            <div class="col-md border border-secondary d-flex justify-content-center align-items-center social-networking">
               <a class="text-muted social-link" href="https://www.facebook.com/" target="_blank"><i class="demo-icon icon-facebook-squared"></i></a>
               <a class="text-muted social-link" href="https://twitter.com/" target="_blank"><i class="demo-icon icon-twitter"></i></a>
               <a class="text-muted social-link" href="https://www.instagram.com/" target="_blank"><i class="demo-icon icon-instagram"></i></a>
@@ -73,21 +73,23 @@
 
                 <div class="collapse navbar-collapse">
                   <ul class="navbar-nav row">
-                    <li class="col-md-1 nav-item active">
-                      <a class="nav-link text-secondary top-directory" href="file:///C:/Projects/prototype-two/index.html">Home<span class="sr-only">(current)</span></a>
+                    <li class="col-md-2 nav-item active">
+                      <a class="nav-link text-secondary top-directory" href="#">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="col-md-3 nav-item">
                       <a class="nav-link text-secondary top-directory" href="aboutus.html">About Us</a>
                     </li>
-                    <li class="col-md-3 nav-item dropdown">
-                      <select class="selectpicker bg-dark border-0 text-secondary">
-                        <option value="Services">Services</option>
-                        <option value="saab">Saab</option>
-                        <option value="mercedes">Mercedes</option>
-                        <option value="audi">Audi</option>
-                      </select>
+                    <li class="col-md-2 nav-item dropdown">
+                      <a href="services.html">
+                        <select class="selectpicker bg-dark border-0 text-secondary">
+                          <option value="Services">Services</option>
+                          <option value="saab">Saab</option>
+                          <option value="mercedes">Mercedes</option>
+                          <option value="audi">Audi</option>
+                        </select>
+                      </a>
                     </li>
-                    <li class="col-md-3 nav-item dropdown">
+                    <li class="col-md-2 nav-item dropdown">
                       <a href="products.html">
                         <select class="selectpicker bg-dark border-0 text-secondary">
                           <option value="Products">Products</option>
@@ -97,8 +99,8 @@
                         </select>
                       </a>
                     </li>
-                    <li class="col-md-1 nav-item">
-                      <a class="nav-link text-secondary" href="#">Gallery</a>
+                    <li class="col-md-2 nav-item">
+                      <a class="nav-link text-secondary" href="gallery.html">Gallery</a>
                     </li>
                     <li class="col-md-1 nav-item">
                       <a class="nav-link text-secondary" href="#">Contact</a>
@@ -107,6 +109,7 @@
                 </div>
                 <i class="text-secondary demo-icon icon-search"></i>
               </nav>
+
             </div>
           </div>
         </div>
