--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,267 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid bg-dark">
+
+      <div class="row container toptop">
+        <div class="col-md-3 bg-light text-center logo-top">
+          <img src="img/logo.png" alt="">
+        </div>
+
+        <div class="col-md-9">
+          <div class="row">
+            <div class="text-secondary col-md email-top">
+              <i class="demo-icon icon-mail"></i>
+              <link>info@hellohelp.com</link>
+            </div>
+
+            <div class="text-secondary col-md phone-top">
+              <i class="demo-icon icon-phone-in-talk"></i>
+              <link>+440 875369208</link>
+            </div>
+
+            <div class="col-md login-button">
+              <div class="btn-group dropright">
+                <button type="button" class="btn btn-outline-secondary border-secondary dropdown-toggle rounded-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    LOG IN
+                  </button>
+                <div class="dropdown-menu">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md language-button">
+              <div class="dropdown">
+                <button class="btn btn-outline-secondary border-secondary dropdown-toggle rounded-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      EN
+                    </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="#">English</a>
+                  <a class="dropdown-item" href="#">Spanish</a>
+                  <a class="dropdown-item" href="#">French</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md border border-secondary d-flex justify-content-center align-items-center social-networking">
+              <a class="text-muted social-link" href="https://www.facebook.com/" target="_blank"><i class="demo-icon icon-facebook-squared"></i></a>
+              <a class="text-muted social-link" href="https://twitter.com/" target="_blank"><i class="demo-icon icon-twitter"></i></a>
+              <a class="text-muted social-link" href="https://www.instagram.com/" target="_blank"><i class="demo-icon icon-instagram"></i></a>
+              <a class="text-muted social-link" href="https://www.gmail.com" target="_blank"><i class="demo-icon icon-mail-1"></i></a>
+            </div>
+
+          </div>
+
+          <div class="row">
+            <div class="col-md-12">
+
+              <nav class="navbar navbar-expand-md">
+                <button class="navbar-toggler" type="button" data-toggle="collapse">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+
+                <div class="collapse navbar-collapse">
+                  <ul class="navbar-nav row">
+                    <li class="col-md-2 nav-item active">
+                      <a class="nav-link text-secondary top-directory" href="index.html">Home<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="col-md-3 nav-item">
+                      <a class="nav-link text-secondary top-directory" href="aboutus.html">About Us</a>
+                    </li>
+                    <li class="col-md-2 nav-item dropdown">
+                      <a href="services.html">
+                        <select class="selectpicker bg-dark border-0 text-secondary">
+                          <option value="Services">Services</option>
+                          <option value="saab">Saab</option>
+                          <option value="mercedes">Mercedes</option>
+                          <option value="audi">Audi</option>
+                        </select>
+                      </a>
+                    </li>
+                    <li class="col-md-2 nav-item dropdown">
+                      <a href="products.html">
+                        <select class="selectpicker bg-dark border-0 text-secondary">
+                          <option value="Products">Products</option>
+                          <option value="saab">Saab</option>
+                          <option value="mercedes">Mercedes</option>
+                          <option value="audi">Audi</option>
+                        </select>
+                      </a>
+                    </li>
+                    <li class="col-md-2 nav-item">
+                      <a class="nav-link text-secondary" href="#">Gallery</a>
+                    </li>
+                    <li class="col-md-1 nav-item">
+                      <a class="nav-link text-secondary" href="#">Contact</a>
+                    </li>
+                  </ul>
+                </div>
+                <i class="text-secondary demo-icon icon-search"></i>
+              </nav>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="row products-breadcrumb">
+        <div class="col-md-2">
+          <h2>Gallery</h2>
+        </div>
+
+          <nav class="col-md-10" aria-label="breadcrumb">
+            <ol class="breadcrumb bg-dark">
+              <li class="breadcrumb-item"><a href="#">Home</a></li>
+              <li class="breadcrumb-item"><a href="#">Pages</a></li>
+              <li class="breadcrumb-item"><a href="#">Services</a></li>
+            </ol>
+          </nav>
+      </div>
+
+      <div class="text-center icon-picture-1 products-pic">
+      </div>
+
+      <div class="bg-light bunchaphotos">
+        <h1>Gallery</h1>
+        <div class="row lorem-btns">
+          <div class="col">
+            <button class="btn btn-light gold-all-btn" type="button" name="button">All</button>
+          </div>
+          <div class="col">
+            <button class="btn btn-light" type="button" name="button">Lorem</button>
+          </div>
+          <div class="col">
+            <button class="btn btn-light" type="button" name="button">Lorem</button>
+          </div>
+          <div class="col">
+            <button class="btn btn-light" type="button" name="button">Lorem</button>
+          </div>
+          <div class="col">
+            <button class="btn btn-light" type="button" name="button">Lorem</button>
+          </div>
+          <div class="col arrow icon-left-open">
+          </div>
+          <div class="col arrow icon-right-open">
+          </div>
+
+        </div>
+
+
+
+        <div class="products-body">
+          <div class="row products-gallery text-center">
+            <div class="col-md-2.5 icon-picture-1">
+            </div>
+            <div class="col-md-2.5 icon-picture-1">
+            </div>
+            <div class="col-md-2.5 icon-picture-1">
+            </div>
+            <div class="col-md-2.5 icon-picture-1">
+            </div>
+            <div class="col-md-2 icon-picture-1">
+            </div>
+          </div>
+          <div class="row products-gallery text-center">
+            <div class="col-md-2.5 icon-picture-1">
+            </div>
+            <div class="col-md-2.5 icon-picture-1">
+            </div>
+            <div class="col-md-2.5 icon-picture-1">
+            </div>
+            <div class="col-md-2.5 icon-picture-1">
+            </div>
+            <div class="col-md-2 icon-picture-1">
+            </div>
+          </div>
+          <div class="row products-gallery text-center">
+            <div class="col-md-2.5 icon-picture-1">
+            </div>
+            <div class="col-md-2.5 icon-picture-1">
+            </div>
+            <div class="col-md-2.5 icon-picture-1">
+            </div>
+            <div class="col-md-2.5 icon-picture-1">
+            </div>
+            <div class="col-md-2 icon-picture-1">
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <footer class="row bg-dark">
+        <div class="col-md-3 nortabout">
+          <h4 class="grey-text">NortSea About</h4>
+          <p class="grey-text">Lorem ipsum dolor sit amet, consectetur mollis ut odio. Vestibulum sit amet tristique libero, vitae accumsan dolor. Praesent et posuere ex. Suspendisse bibendum orci nec imperdiet porttitor. Quisque blandit ipsum at erat vulputate posuere. Morbi id urna ultrices, accumsan tortor vitae, facilisis leo.</p>
+          <button type="button" class="text-secondary btn btn-dark dropdown-toggle border-bottom" data-toggle="dropdown">
+            Read More
+          </button>
+        </div>
+
+        <div class="col-md-3 footer-links">
+          <h4 class="grey-text">NortSea Hotel</h4>
+            <a href="#" class="grey-text text-center">About Us</a>
+            <div class="w-100">
+
+            </div>
+            <a href="#" class="grey-text">Services</a>
+            <div class="w-100">
+
+            </div>
+            <a href="#" class="grey-text">Contact</a>
+        </div>
+
+
+        <div class="col-md-3">
+          <h4 class="grey-text">Contact Us</h4>
+          <div class="row">
+            <div class="col">
+              <p class="gold-text"><i class="demo-icon icon-location"></i>Address:</p>
+            </div>
+            <div class="col">
+              <p class="grey-text">1100 Pico Blvd
+              Santa Monica, CA 90405
+              United States</p>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col">
+              <p class="gold-text"><i class="demo-icon icon-phone"></i>Phone:</p>
+            </div>
+            <div class="col">
+              <p class="grey-text">+440 1233213208</p>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col">
+              <p class="gold-text"><i class="demo-icon icon-paper-plane"></i>Email:</p>
+            </div>
+            <div class="col">
+              <p class="grey-text">support@nortsea.com</p>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col">
+              <p class="gold-text"><i class="demo-icon icon-compass"></i>GPS:</p>
+            </div>
+            <div class="col">
+              <p class="grey-text">12.021211/118.469009</p>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-md-3 logo-footer">
+          <img src="img/logo-footer.png" alt="">
+        </div>
+
+      </footer>
+
 
     </div>
 
