--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/products.css">
+    <link rel="stylesheet" href="css/gallery.css">
     <link rel="stylesheet" href="css/fontello.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <script defer src="css/fonts/fontawesome-all.js">
@@ -14,7 +14,7 @@
   <body>
     <div class="container-fluid bg-dark">
 
-      <div class="row">
+      <div class="row container toptop">
         <div class="col-md-3 bg-light text-center logo-top">
           <img src="img/logo.png" alt="">
         </div>
@@ -31,9 +31,9 @@
               <link>+440 875369208</link>
             </div>
 
-            <div class="col-md">
-              <div class="btn-group dropright login-button">
-                <button type="button" class="btn btn-outline-secondary dropdown-toggle rounded-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <div class="col-md login-button">
+              <div class="btn-group dropright">
+                <button type="button" class="btn btn-outline-secondary border-secondary dropdown-toggle rounded-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     LOG IN
                   </button>
                 <div class="dropdown-menu">
@@ -41,9 +41,9 @@
               </div>
             </div>
 
-            <div class="col-md">
+            <div class="col-md language-button">
               <div class="dropdown">
-                <button class="language-button btn btn-outline-secondary dropdown-toggle rounded-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-outline-secondary border-secondary dropdown-toggle rounded-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       EN
                     </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -54,7 +54,7 @@
               </div>
             </div>
 
-            <div class="col-md border border-secondary text-center social-networking">
+            <div class="col-md border border-secondary d-flex justify-content-center align-items-center social-networking">
               <a class="text-muted social-link" href="https://www.facebook.com/" target="_blank"><i class="demo-icon icon-facebook-squared"></i></a>
               <a class="text-muted social-link" href="https://twitter.com/" target="_blank"><i class="demo-icon icon-twitter"></i></a>
               <a class="text-muted social-link" href="https://www.instagram.com/" target="_blank"><i class="demo-icon icon-instagram"></i></a>
@@ -73,13 +73,13 @@
 
                 <div class="collapse navbar-collapse">
                   <ul class="navbar-nav row">
-                    <li class="col-md-1 nav-item active">
-                      <a class="nav-link text-secondary top-directory" href="file:///C:/Projects/prototype-two/index.html">Home<span class="sr-only">(current)</span></a>
+                    <li class="col-md-2 nav-item active">
+                      <a class="nav-link text-secondary top-directory" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="col-md-3 nav-item">
                       <a class="nav-link text-secondary top-directory" href="aboutus.html">About Us</a>
                     </li>
-                    <li class="col-md-3 nav-item dropdown">
+                    <li class="col-md-2 nav-item dropdown">
                       <a href="services.html">
                         <select class="selectpicker bg-dark border-0 text-secondary">
                           <option value="Services">Services</option>
@@ -89,7 +89,7 @@
                         </select>
                       </a>
                     </li>
-                    <li class="col-md-3 nav-item dropdown">
+                    <li class="col-md-2 nav-item dropdown">
                       <a href="products.html">
                         <select class="selectpicker bg-dark border-0 text-secondary">
                           <option value="Products">Products</option>
@@ -99,16 +99,17 @@
                         </select>
                       </a>
                     </li>
-                    <li class="col-md-1 nav-item">
-                      <a class="nav-link text-secondary" href="#">Gallery</a>
+                    <li class="col-md-2 nav-item">
+                      <a class="nav-link text-secondary" href="gallery.html">Gallery</a>
                     </li>
                     <li class="col-md-1 nav-item">
-                      <a class="nav-link text-secondary" href="#">Contact</a>
+                      <a class="nav-link text-secondary" href="contact.html">Contact</a>
                     </li>
                   </ul>
                 </div>
                 <i class="text-secondary demo-icon icon-search"></i>
               </nav>
+
             </div>
           </div>
         </div>
