--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/products.css">
+    <link rel="stylesheet" href="css/fontello.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <script defer src="css/fonts/fontawesome-all.js">
+
+    </script>
   </head>
   <body>
     <div class="container-fluid bg-dark">
