--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 
     <div class="row container toptop">
-      <div class="col-md-3 bg-light text-center logo-top">
+
+      <div class="col-md-3 col-sm-12 bg-light text-center logo-top">
         <img src="img/logo.png" alt="">
       </div>
 
@@ -70,12 +71,12 @@
           <div class="col-md-12">
 
             <nav class="navbar navbar-expand-md">
-              <button class="navbar-toggler" type="button" data-toggle="collapse">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                 <span class="navbar-toggler-icon"></span>
+              </button>
 
               <div class="collapse navbar-collapse">
-                <ul class="navbar-nav row">
+                <ul class="navbar-nav mr-auto row">
                   <li class="col-md-2 nav-item active">
                     <a class="nav-link text-secondary top-directory" href="#">Home<span class="sr-only">(current)</span></a>
                   </li>
@@ -110,27 +111,27 @@
                   </li>
                 </ul>
               </div>
-              <i class="text-secondary demo-icon icon-search"></i>
+
             </nav>
+            <i class="demo-icon icon-search"></i>
 
           </div>
         </div>
       </div>
     </div>
-
-
     <hr class="header-hr">
+
     </div>
 
-
-    <div class="row bg-dark">
-
-      <div class="jumbotron col-md-10 bg-dark">
+    <div class="row bg-dark sale-back">
+      <div class="jumbotron col-md-10 col-sm-12 bg-dark">
         <div class="container">
           <section>
             <div class="page-header">
               <h2 class="text-light font-weight-light">35% Sale</h2>
               <h1 class="text-light font-weight-bold">You enter summer with<br>refreshing rates</h1>
+              <button class="text-secondary bg-light explore-button" type="button" name="button">Explore It</button>
+
             </div>
 
             <div class="carousel slide" data-ride="carousel">
@@ -140,37 +141,8 @@
                 <li data-target="#screenshot-carousel" data-slide-to="2"></li>
                 <li data-target="#screenshot-carousel" data-slide-to="3"></li>
               </ol>
-              <div class="carousel-inner">
-                <div class="item active">
-                  <div class="carousel-caption">
-                    <h3></h3>
-                    <p></p>
-                  </div>
-                </div>
-                <div class="item">
-                  <div class="carousel-caption">
-                    <h3></h3>
-                    <p></p>
-                  </div>
-                </div>
-                <div class="item">
-                  <img src="img/dining-room.png" alt="Text of the image">
-                  <div class="carousel-caption">
-                    <h3></h3>
-                    <p></p>
-                  </div>
-                </div>
-                <div class="item">
-                  <div class="carousel-caption">
-                    <h3></h3>
-                    <p></p>
-
-                  </div>
-                </div>
-                <button class="text-secondary bg-light explore-button" type="button" name="button">Explore It</button>
-              </div>
-
             </div><!-- End Carousel -->
+
             <div class="col-md-2 widgets">
               <img src="img/weather.png" alt="">
               <img src="img/gellery.png" alt="">
@@ -226,7 +198,7 @@
             </div>
           </div>
 
-          <div class="form-group col-md-1">
+          <div class="form-group col-md-1 book-options">
             <label>Room</label>
             <select class="form-control">
                  <option>1</option>
@@ -237,7 +209,7 @@
                </select>
           </div>
 
-          <div class="form-group col-md-1">
+          <div class="form-group col-md-1 book-options">
             <label>Person</label>
             <select class="form-control">
                  <option>1</option>
@@ -248,7 +220,7 @@
                </select>
           </div>
 
-          <div class="form-group col-md-1">
+          <div class="form-group col-md-1 book-options">
             <label for="exampleFormControlSelect1">Child</label>
             <select class="form-control">
                  <option>1</option>
@@ -259,7 +231,7 @@
                </select>
           </div>
 
-          <div class="form-group col-md-1">
+          <div class="form-group col-md-1 book-options">
             <label for="exampleFormControlSelect1">Day</label>
             <select class="form-control">
                  <option>1</option>
@@ -271,7 +243,7 @@
           </div>
 
           <div class="col-md-2">
-            <button type="button" class="btn btn-secondary btn-lg search-book" name="button">Search Book</button>
+            <button type="button" class="btn btn-secondary btn-lg search-book rounded-0" name="button">Search Book</button>
           </div>
         </div>
 
