--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
 
 
       <div class="container">
-        <div class="bg-light hotel-tab">
+        <div class="hotel-tab">
           <i class="demo-icon float-left icon-hospital"></i>
           <h4>Hotel</h4>
         </div>
         <div class="w-100">
 
         </div>
-        <div class="row bg-light booking">
+        <div class="row booking">
 
           <div class="container col-md-3">
             <div class="row">
@@ -248,12 +248,7 @@
         </div>
 
       </div>
-
     </div>
-
-
-
-<!-- Copy & paste below -->
 
 
     <div class="card-deck first-page-cards">
@@ -319,7 +314,7 @@
       </div>
     </div>
 
-    <div class="row text-center">
+    <div class="row text-center about-hotel-p">
       <div class="col-md-12">
         <h1 class="gold-text about-hotel">About Hotel</h1>
         <p class="text-secondary about-lorem">Mauris porttitor hendrerit massa dapibus rhoncus. Aliquam ac risus at justo faucibus sagittis. Pellentesque<br>habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent tristique placerat varius.</p>
@@ -411,7 +406,7 @@
       <div class="col-md-7 news-section">
         <h3 class="text-primary">News</h3>
         <a href="https://www.google.com/search?q=online+pacman+game&oq=online+pacman+game&aqs=chrome..69i57j0l5.4160j1j7&sourceid=chrome&ie=UTF-8#clb=clb">
-          <img class="float-right" src="img/half-pacman.png" alt="">
+          <img class="float-right pacman" src="img/half-pacman.png" alt="">
         </a>
         <div class="row">
           <div class="col">
@@ -424,23 +419,28 @@
               Read More
             </button>
           </div>
+
           <div class="w-100">
           </div>
-          <div class="col">
+
+          <div class="col disappear">
             <img class="calendar-dates" src="img/feb15.svg" alt="">
           </div>
-          <div class="col">
+          <div class="col disappear">
             <h5>Lorem ipsum dolor sit amet</h5>
             <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquam, tortor in varius pharetra</p>
             <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
               Read More
             </button>
           </div>
-          <div class="w-100"></div>
-          <div class="col">
+
+          <div class="w-100">
+          </div>
+
+          <div class="col disappear">
             <img class="calendar-dates" src="img/march2.svg" alt="">
           </div>
-          <div class="col">
+          <div class="col disappear">
             <h5>Lorem ipsum dolor sit amet</h5>
             <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquam, tortor in varius pharetra</p>
             <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
