done but not done

--- a/index.html
+++ b/index.html
@@ -457,26 +457,29 @@
 
           <h3 class="text-success">Announcements</h3>
           <a href="https://www.google.com/search?q=online+pacman+game&oq=online+pacman+game&aqs=chrome..69i57j0l5.4160j1j7&sourceid=chrome&ie=UTF-8#clb=clb">
-            <img class="float-right" src="img/half-pacman.png" alt="">
+            <img class="float-right pacman" src="img/half-pacman.png" alt="">
           </a>
-          <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquam, tortor.</h5>
+          <h5>Lorem ipsum dolor sit amet<span class="hidden-text">, consectetur adipiscing elit. Morbi aliquam, tortor.</span></h5>
           <p class="text-secondary">Aenean et enim ullamcorper erat aliquam congue non ut nisi. Ut vel velit cursus, aliquet ex eu, cursus velit. Morbi aliquam.</p>
           <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
             Read More
           </button>
           <hr>
-          <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquam, tortor.</h5>
+          <h5>Lorem ipsum dolor sit amet<span class="hidden-text">, consectetur adipiscing elit. Morbi aliquam, tortor.</span></h5>
           <p class="text-secondary">Aenean et enim ullamcorper erat aliquam congue non ut nisi. Ut vel velit cursus, aliquet ex eu, cursus velit. Morbi aliquam.</p>
           <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle border-bottom" data-toggle="dropdown">
             Read More
           </button>
+          <button type="button" class="btn btn-light w-75 view-all-btn-2">View All</button>
 
         </div>
+
 
         <div class="row products">
           <div class="col-md-12">
             <h3 class="text-primary">Products</h3>
-            <p class="text-secondary w-50">Nunc iaculis ornare nisi, eget volutpat tempor quis. Quisque blandit ipsum mi at erat vulputate posuere.</p>
+            <h5 class="shown-text">Lorem ipsum dolor sit amet</h5>
+            <p class="text-secondary">Nunc iaculis ornare nisi, eget volutpat tempor quis. Quisque blandit ipsum mi at erat vulputate posuere.</p>
             <button type="button" class="text-primary btn btn-outline-light dropdown-toggle border-bottom" data-toggle="dropdown">
               Read More
             </button>
